Adding github actions workflow to push to gh pages
* Adding a nojekyll file so that the blazor formatting is used (instead of the default Jekyll implementation on gh pages)
* Deploying to the /BlazorPwa/ url

--- a/src/BlazorPwa.Client/wwwroot/manifest.json
+++ b/src/BlazorPwa.Client/wwwroot/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "BlazorPwa.Client",
-  "short_name": "BlazorPwa.Client",
-  "start_url": "/",
+  "name": "BlazorPwa",
+  "short_name": "BlazorPwa",
+  "start_url": "/BlazorPwa/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#03173d",
